--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "prepush": "yarn test && yarn coveralls"
   },
   "dependencies": {
-    "@types/express": "^4.0.35",
+    "@types/express": "^4.0.36",
     "@types/hammerjs": "^2.0.34",
-    "@types/history": "^4.5.1",
-    "@types/jest": "^19.2.4",
-    "@types/jquery": "^2.0.46",
-    "@types/materialize-css": "^0.98.0",
-    "@types/node": "^7.0.27",
+    "@types/history": "^4.5.2",
+    "@types/jest": "^20.0.0",
+    "@types/jquery": "^3.2.1",
+    "@types/materialize-css": "^0.98.3",
+    "@types/node": "^7.0.31",
+    "@types/node-uuid": "^0.0.28",
     "@types/prismjs": "^1.6.2",
-    "@types/react": "^15.0.26",
+    "@types/react": "^15.0.29",
     "@types/react-dom": "^15.5.0",
     "@types/react-hot-loader": "^3.0.1",
-    "@types/react-redux": "^4.4.41",
+    "@types/react-redux": "^4.4.43",
     "@types/react-router": "^4.0.11",
     "@types/react-router-dom": "^4.0.4",
     "@types/react-router-redux": "^5.0.2",
@@ -39,15 +40,14 @@
     "@types/redux-devtools-log-monitor": "^1.0.30",
     "@types/redux-logger": "^3.0.0",
     "@types/redux-promise": "^0.5.24",
-    "@types/superagent": "^2.0.37",
-    "@types/uuid": "^3.0.0",
-    "@types/webpack": "^2.2.15",
+    "@types/superagent": "^3.5.0",
+    "@types/webpack": "^2.2.16",
     "@types/webpack-env": "^1.13.0",
     "add-asset-html-webpack-plugin": "^2.0.1",
     "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.1.3",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -59,25 +59,25 @@
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.4",
-    "del": "^2.2.2",
+    "del": "^3.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-react": "^7.1.0",
     "express": "^4.15.3",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-stylelint": "^3.9.0",
-    "gulp-tslint": "^8.1.0",
+    "gulp-tslint": "^8.1.1",
     "gulp-unzip": "^0.2.0",
     "gulp-zip": "^4.0.0",
     "hammerjs": "^2.0.8",
     "helmet": "^3.6.1",
-    "history": "^4.6.1",
+    "history": "^4.6.2",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
     "immutable": "4.0.0-rc.2",
@@ -86,19 +86,20 @@
     "materialize-css": "^0.98.2",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
-    "pg-promise": "^5.8.2",
-    "postcss": "^6.0.1",
+    "node-uuid": "^1.4.8",
+    "pg-promise": "^5.9.3",
+    "postcss": "^6.0.2",
     "postcss-cssnext": "^2.11.0",
-    "postcss-loader": "^2.0.5",
+    "postcss-loader": "^2.0.6",
     "prismjs": "^1.6.0",
     "progress-bar-webpack-plugin": "^1.9.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-hot-loader": "v3.0.0-beta.7",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
-    "redux": "^3.6.0",
+    "redux": "^3.7.0",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
@@ -106,20 +107,20 @@
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "run-sequence": "^1.2.2",
-    "sass-loader": "^6.0.5",
+    "sass-loader": "^6.0.6",
     "serve-favicon": "^2.4.3",
-    "style-loader": "^0.18.1",
-    "stylelint": "^7.10.1",
+    "style-loader": "^0.18.2",
+    "stylelint": "^7.11.1",
     "stylelint-config-standard": "^16.0.0",
     "superagent": "^3.5.2",
     "ts-loader": "^2.1.0",
-    "tslint": "^5.4.2",
+    "tslint": "^5.4.3",
     "tslint-eslint-rules": "^4.1.1",
     "tslint-react": "^3.0.0",
     "typescript": "^2.3.4",
-    "uglify-js": "^3.0.15",
-    "url-loader": "^0.5.8",
-    "uuid": "^3.0.1",
+    "uglify-js": "^3.0.18",
+    "url-loader": "^0.5.9",
+    "uuid": "^3.1.0",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.10.2",
@@ -130,7 +131,7 @@
     "coveralls": "^2.13.1",
     "husky": "^0.13.4",
     "jest": "^20.0.4",
-    "ts-jest": "^20.0.5"
+    "ts-jest": "^20.0.6"
   },
   "browserslist": [
     "> 1%",
