--- a/circle.yml
+++ b/circle.yml
@@ -5,18 +5,13 @@
 
 version: 2
 
-defaults: &defaults
-  working_directory: ~
-  docker:
-    - image: circleci/node:7.10.0
-
 jobs:
-  build:
-    <<: *defaults
+  build_and_test:
+    working_directory: ~
+    docker:
+      - image: circleci/node:7.10.0
     steps:
       - checkout
-
-      # This should go into custom primary image, here's only for the sake of explanation
       - run:
           name: Install Docker client
           command: |
@@ -25,8 +20,6 @@ jobs:
             curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             sudo cp -r /tmp/docker/* /usr/bin
-
-      # This should go into custom primary image, here's only for the sake of explanation
       - run:
           name: Install Docker Compose
           command: |
@@ -34,27 +27,10 @@ jobs:
             curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /tmp/docker-compose
             sudo cp /tmp/docker-compose /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
-
       - setup_remote_docker
-
       - run:
           name: Run Docker Compose
-          command: |
-            set -x
-            docker-compose up
-  test:
-    <<: *defaults
-    steps:
-      - run: yarn test
-
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
+          command: docker-compose up -d
+      - run:
+          name: Run test
+          command: yarn test
