--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
+    "connected-react-router": "^4.2.3",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
@@ -98,7 +99,6 @@
     "react-hot-loader": "v3.0.0-beta.7",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
