--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ jobs:
           command: |
             set -x
             VER="17.09.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             sudo cp -r /tmp/docker/* /usr/bin
       - run:
