--- a/package.json
+++ b/package.json
@@ -19,118 +19,118 @@
     "prepush": "yarn test && yarn coveralls"
   },
   "dependencies": {
-    "@types/express": "^4.0.37",
-    "@types/hammerjs": "^2.0.35",
-    "@types/history": "^4.6.1",
-    "@types/jest": "^21.1.4",
-    "@types/jquery": "^3.2.15",
-    "@types/materialize-css": "^0.100.0",
-    "@types/node-uuid": "^0.0.28",
-    "@types/prismjs": "^1.6.4",
-    "@types/react": "^16.0.14",
-    "@types/react-dom": "^16.0.1",
-    "@types/react-hot-loader": "^3.0.4",
-    "@types/react-redux": "^5.0.10",
-    "@types/react-router": "^4.0.15",
-    "@types/react-router-dom": "^4.0.8",
-    "@types/react-router-redux": "^5.0.8",
-    "@types/redux-devtools": "^3.0.40",
-    "@types/redux-devtools-dock-monitor": "^1.1.31",
-    "@types/redux-devtools-log-monitor": "^1.0.32",
-    "@types/redux-logger": "^3.0.4",
-    "@types/redux-promise": "^0.5.27",
-    "@types/superagent": "^3.5.6",
-    "@types/webpack": "^3.0.13",
-    "@types/webpack-env": "^1.13.2",
-    "add-asset-html-webpack-plugin": "^2.1.2",
-    "autoprefixer": "^7.1.5",
-    "awesome-typescript-loader": "^3.2.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "body-parser": "^1.18.2",
-    "compression": "^1.7.1",
-    "connected-react-router": "^4.2.3",
-    "cookie-parser": "^1.4.3",
-    "css-loader": "^0.28.7",
-    "del": "^3.0.0",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^1.1.5",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^4.0.0",
-    "gulp-stylelint": "^5.0.0",
-    "gulp-tslint": "^8.1.2",
-    "gulp-unzip": "^0.2.0",
-    "gulp-zip": "^4.0.0",
-    "hammerjs": "^2.0.8",
-    "helmet": "^3.9.0",
-    "history": "^4.7.2",
-    "html-webpack-plugin": "^2.30.1",
-    "image-webpack-loader": "^3.4.2",
+    "@types/express": "4.0.37",
+    "@types/hammerjs": "2.0.35",
+    "@types/history": "4.6.1",
+    "@types/jest": "21.1.4",
+    "@types/jquery": "3.2.15",
+    "@types/materialize-css": "0.100.0",
+    "@types/node-uuid": "0.0.28",
+    "@types/prismjs": "1.6.4",
+    "@types/react": "16.0.15",
+    "@types/react-dom": "16.0.2",
+    "@types/react-hot-loader": "3.0.4",
+    "@types/react-redux": "5.0.10",
+    "@types/react-router": "4.0.15",
+    "@types/react-router-dom": "4.0.8",
+    "@types/react-router-redux": "5.0.8",
+    "@types/redux-devtools": "3.0.40",
+    "@types/redux-devtools-dock-monitor": "1.1.31",
+    "@types/redux-devtools-log-monitor": "1.0.32",
+    "@types/redux-logger": "3.0.4",
+    "@types/redux-promise": "0.5.27",
+    "@types/superagent": "3.5.6",
+    "@types/webpack": "3.0.13",
+    "@types/webpack-env": "1.13.2",
+    "add-asset-html-webpack-plugin": "2.1.2",
+    "autoprefixer": "7.1.5",
+    "awesome-typescript-loader": "3.2.3",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-register": "6.26.0",
+    "body-parser": "1.18.2",
+    "compression": "1.7.1",
+    "connected-react-router": "4.2.3",
+    "cookie-parser": "1.4.3",
+    "css-loader": "0.28.7",
+    "del": "3.0.0",
+    "eslint": "4.9.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-import-resolver-webpack": "0.8.3",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
+    "express": "4.16.2",
+    "extract-text-webpack-plugin": "3.0.1",
+    "file-loader": "1.1.5",
+    "gulp": "3.9.1",
+    "gulp-eslint": "4.0.0",
+    "gulp-stylelint": "5.0.0",
+    "gulp-tslint": "8.1.2",
+    "gulp-unzip": "0.2.0",
+    "gulp-zip": "4.0.0",
+    "hammerjs": "2.0.8",
+    "helmet": "3.9.0",
+    "history": "4.7.2",
+    "html-webpack-plugin": "2.30.1",
+    "image-webpack-loader": "3.4.2",
     "immutable": "4.0.0-rc.9",
-    "jquery": "^3.2.1",
-    "lodash": "^4.17.4",
-    "materialize-css": "^0.100.2",
-    "morgan": "^1.9.0",
-    "node-sass": "^4.5.3",
-    "node-uuid": "^1.4.8",
-    "pg-promise": "^6.5.1",
-    "postcss": "^6.0.13",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "prismjs": "^1.8.1",
-    "progress-bar-webpack-plugin": "^1.10.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.1.1",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "redux-devtools": "^3.4.0",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.3.0",
-    "redux-logger": "^3.0.6",
-    "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0",
-    "run-sequence": "^2.1.0",
-    "sass-loader": "^6.0.6",
-    "serve-favicon": "^2.4.5",
-    "style-loader": "^0.19.0",
-    "stylelint": "^8.2.0",
-    "stylelint-config-standard": "^17.0.0",
-    "superagent": "^3.6.3",
-    "ts-loader": "^3.0.3",
-    "tslint": "^5.7.0",
-    "tslint-eslint-rules": "^4.1.1",
-    "tslint-react": "^3.2.0",
-    "typescript": "^2.5.3",
-    "uglify-js": "^3.1.4",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.20.0",
-    "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "^4.1.0"
+    "jquery": "3.2.1",
+    "lodash": "4.17.4",
+    "materialize-css": "0.100.2",
+    "morgan": "1.9.0",
+    "node-sass": "4.5.3",
+    "node-uuid": "1.4.8",
+    "pg-promise": "7.0.2",
+    "postcss": "6.0.13",
+    "postcss-cssnext": "3.0.2",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.0.8",
+    "prismjs": "1.8.3",
+    "progress-bar-webpack-plugin": "1.10.0",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
+    "react-hot-loader": "3.1.1",
+    "react-redux": "5.0.6",
+    "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
+    "redux-devtools": "3.4.0",
+    "redux-devtools-dock-monitor": "1.1.2",
+    "redux-devtools-log-monitor": "1.3.0",
+    "redux-logger": "3.0.6",
+    "redux-promise": "0.5.3",
+    "redux-thunk": "2.2.0",
+    "run-sequence": "2.2.0",
+    "sass-loader": "6.0.6",
+    "serve-favicon": "2.4.5",
+    "style-loader": "0.19.0",
+    "stylelint": "8.2.0",
+    "stylelint-config-standard": "17.0.0",
+    "superagent": "3.7.0",
+    "ts-loader": "3.0.3",
+    "tslint": "5.7.0",
+    "tslint-eslint-rules": "4.1.1",
+    "tslint-react": "3.2.0",
+    "typescript": "2.5.3",
+    "uglify-js": "3.1.4",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-bundle-analyzer": "2.9.0",
+    "webpack-dev-middleware": "1.12.0",
+    "webpack-hot-middleware": "2.20.0",
+    "webpack-md5-hash": "0.0.5",
+    "webpack-merge": "4.1.0"
   },
   "devDependencies": {
-    "coveralls": "^3.0.0",
-    "husky": "^0.14.3",
-    "jest": "^21.2.1",
-    "ts-jest": "^21.1.3"
+    "coveralls": "3.0.0",
+    "husky": "0.14.3",
+    "jest": "21.2.1",
+    "ts-jest": "21.1.3"
   },
   "browserslist": [
     "> 1%",
