--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "@types/hammerjs": "2.0.35",
     "@types/history": "4.6.2",
     "@types/jest": "21.1.8",
-    "@types/jquery": "3.2.16",
-    "@types/materialize-css": "0.100.2",
+    "@types/jquery": "3.2.17",
+    "@types/materialize-css": "0.100.3",
     "@types/node-uuid": "0.0.28",
-    "@types/prismjs": "1.6.5",
-    "@types/react": "16.0.25",
+    "@types/prismjs": "1.9.0",
+    "@types/react": "16.0.31",
     "@types/react-dom": "16.0.3",
     "@types/react-hot-loader": "3.0.5",
-    "@types/react-redux": "5.0.13",
-    "@types/react-router": "4.0.18",
-    "@types/react-router-dom": "4.2.2",
+    "@types/react-redux": "5.0.14",
+    "@types/react-router": "4.0.19",
+    "@types/react-router-dom": "4.2.3",
     "@types/redux-devtools": "3.0.42",
     "@types/redux-devtools-dock-monitor": "1.1.31",
     "@types/redux-devtools-log-monitor": "1.0.32",
@@ -40,10 +40,10 @@
     "@types/redux-promise": "0.5.28",
     "@types/superagent": "3.5.6",
     "@types/webpack": "3.8.1",
-    "@types/webpack-env": "1.13.2",
+    "@types/webpack-env": "1.13.3",
     "add-asset-html-webpack-plugin": "2.1.2",
-    "autoprefixer": "7.1.6",
-    "awesome-typescript-loader": "3.4.0",
+    "autoprefixer": "7.2.3",
+    "awesome-typescript-loader": "3.4.1",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
@@ -60,16 +60,16 @@
     "cookie-parser": "1.4.3",
     "css-loader": "0.28.7",
     "del": "3.0.0",
-    "eslint": "4.11.0",
+    "eslint": "4.13.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-webpack": "0.8.3",
     "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.5.1",
     "express": "4.16.2",
     "express-session": "1.15.6",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
+    "file-loader": "1.1.6",
     "gulp": "3.9.1",
     "gulp-eslint": "4.0.0",
     "gulp-stylelint": "5.0.0",
@@ -82,21 +82,22 @@
     "immutable": "4.0.0-rc.9",
     "jquery": "3.2.1",
     "lodash": "4.17.4",
+    "material-design-icons": "3.0.1",
     "materialize-css": "0.100.2",
     "morgan": "1.9.0",
     "node-sass": "4.7.2",
     "node-uuid": "1.4.8",
-    "nodemon": "1.12.1",
-    "offline-plugin": "4.8.4",
+    "nodemon": "1.13.3",
+    "offline-plugin": "4.8.5",
     "pg": "7.4.0",
     "postcss": "6.0.14",
     "postcss-cssnext": "3.0.2",
     "postcss-import": "11.0.0",
     "postcss-loader": "2.0.9",
-    "prismjs": "1.8.4",
+    "prismjs": "1.9.0",
     "progress-bar-webpack-plugin": "1.10.0",
-    "react": "16.1.1",
-    "react-dom": "16.1.1",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-hot-loader": "3.1.3",
     "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
@@ -110,28 +111,29 @@
     "run-sequence": "2.2.0",
     "sass-loader": "6.0.6",
     "serve-favicon": "2.4.5",
-    "style-loader": "0.19.0",
-    "stylelint": "8.2.0",
-    "stylelint-config-standard": "17.0.0",
-    "superagent": "3.8.1",
-    "ts-loader": "3.1.1",
+    "style-loader": "0.19.1",
+    "stylelint": "8.4.0",
+    "stylelint-config-standard": "18.0.0",
+    "superagent": "3.8.2",
+    "ts-loader": "3.2.0",
     "tslint": "5.8.0",
     "tslint-microsoft-contrib": "5.0.1",
     "tslint-react": "3.2.0",
-    "typescript": "2.6.1",
-    "uglify-js": "3.1.10",
+    "typescript": "2.6.2",
+    "uglify-js": "3.2.2",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
+    "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.1",
-    "webpack-dev-middleware": "1.12.1",
-    "webpack-hot-middleware": "2.20.0",
-    "webpack-merge": "4.1.1"
+    "webpack-dev-middleware": "2.0.1",
+    "webpack-hot-middleware": "2.21.0",
+    "webpack-merge": "4.1.1",
+    "webpack-pwa-manifest": "3.3.4"
   },
   "devDependencies": {
     "coveralls": "3.0.0",
     "husky": "0.14.3",
     "jest": "21.2.1",
-    "ts-jest": "21.2.3"
+    "ts-jest": "21.2.4"
   },
   "browserslist": [
     "> 1%",
