--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ jobs:
           name: Install Docker client
           command: |
             set -x
-            VER="17.09.0-ce"
+            VER="17.09.1-ce"
             curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             sudo cp -r /tmp/docker/* /usr/bin
@@ -30,7 +30,7 @@ jobs:
       - setup_remote_docker
       - run:
           name: Run Docker Compose
-          command: docker-compose up -d
+          command: docker-compose up --build -d
       - run:
           name: Install dependencies
           command: yarn install
