--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "prepush": "yarn test && yarn coverage"
   },
   "dependencies": {
-    "@types/express": "4.0.39",
+    "@types/express": "4.11.0",
     "@types/hammerjs": "2.0.35",
     "@types/history": "4.6.2",
-    "@types/jest": "21.1.8",
+    "@types/jest": "21.1.9",
     "@types/jquery": "3.2.17",
     "@types/materialize-css": "0.100.3",
     "@types/node-uuid": "0.0.28",
@@ -31,7 +31,7 @@
     "@types/react-dom": "16.0.3",
     "@types/react-hot-loader": "3.0.5",
     "@types/react-redux": "5.0.14",
-    "@types/react-router": "4.0.19",
+    "@types/react-router": "4.0.20",
     "@types/react-router-dom": "4.2.3",
     "@types/redux-devtools": "3.0.42",
     "@types/redux-devtools-dock-monitor": "1.1.31",
@@ -60,6 +60,7 @@
     "cookie-parser": "1.4.3",
     "css-loader": "0.28.7",
     "del": "3.0.0",
+    "duplicate-package-checker-webpack-plugin": "2.0.2",
     "eslint": "4.13.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-webpack": "0.8.3",
@@ -87,7 +88,7 @@
     "morgan": "1.9.0",
     "node-sass": "4.7.2",
     "node-uuid": "1.4.8",
-    "nodemon": "1.13.3",
+    "nodemon": "1.14.1",
     "offline-plugin": "4.8.5",
     "pg": "7.4.0",
     "postcss": "6.0.14",
@@ -124,7 +125,7 @@
     "url-loader": "0.6.2",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.1",
-    "webpack-dev-middleware": "2.0.1",
+    "webpack-dev-middleware": "2.0.2",
     "webpack-hot-middleware": "2.21.0",
     "webpack-merge": "4.1.1",
     "webpack-pwa-manifest": "3.3.4"
@@ -132,14 +133,15 @@
   "devDependencies": {
     "coveralls": "3.0.0",
     "husky": "0.14.3",
-    "jest": "21.2.1",
-    "ts-jest": "21.2.4"
+    "jest": "22.0.3",
+    "ts-jest": "22.0.0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions"
   ],
   "nodemonConfig": {
+    "quiet": true,
     "watch": [
       "backend/controllers/",
       "backend/routes/",
@@ -149,15 +151,6 @@
     ]
   },
   "jest": {
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": {
-          "module": "commonjs",
-          "target": "es6",
-          "jsx": "react"
-        }
-      }
-    },
     "mapCoverage": true,
     "transform": {
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
