--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "connect-redis": "3.3.2",
     "connected-react-router": "4.3.0",
     "cookie-parser": "1.4.3",
+    "coveralls": "3.0.0",
     "css-loader": "0.28.7",
     "del": "3.0.0",
     "duplicate-package-checker-webpack-plugin": "2.0.2",
@@ -77,10 +78,12 @@
     "gulp-tslint": "8.1.2",
     "hammerjs": "2.0.8",
     "helmet": "3.9.0",
+    "husky": "0.14.3",
     "history": "4.7.2",
     "html-webpack-plugin": "2.30.1",
     "image-webpack-loader": "3.4.2",
     "immutable": "4.0.0-rc.9",
+    "jest": "22.0.4",
     "jquery": "3.2.1",
     "lodash": "4.17.4",
     "material-design-icons": "3.0.1",
@@ -116,6 +119,7 @@
     "stylelint": "8.4.0",
     "stylelint-config-standard": "18.0.0",
     "superagent": "3.8.2",
+    "ts-jest": "22.0.0",
     "ts-loader": "3.2.0",
     "tslint": "5.8.0",
     "tslint-microsoft-contrib": "5.0.1",
@@ -129,12 +133,6 @@
     "webpack-hot-middleware": "2.21.0",
     "webpack-merge": "4.1.1",
     "webpack-pwa-manifest": "3.4.1"
-  },
-  "devDependencies": {
-    "coveralls": "3.0.0",
-    "husky": "0.14.3",
-    "jest": "22.0.4",
-    "ts-jest": "22.0.0"
   },
   "browserslist": [
     "> 1%",
