--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "i18next-browser-languagedetector": "^2.2.3",
     "image-webpack-loader": "^4.3.1",
     "immutable": "4.0.0-rc.9",
-    "materialize-css": "1.0.0-rc.2",
+    "materialize-css": "1.0.0",
     "mini-css-extract-plugin": "^0.4.2",
     "morgan": "^1.9.0",
     "node-sass": "^4.9.3",
@@ -98,7 +98,7 @@
     "react-content-loader": "^3.1.2",
     "react-dom": "^16.5.0",
     "react-hot-loader": "^4.3.6",
-    "react-i18next": "^7.11.1",
+    "react-i18next": "^7.12.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -109,7 +109,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "trash-cli": "^1.4.0",
-    "ts-loader": "^5.0.0",
+    "ts-loader": "^5.1.0",
     "typescript": "^3.0.3",
     "url-loader": "^1.1.1",
     "uuid": "^3.3.2",
@@ -121,7 +121,7 @@
   },
   "devDependencies": {
     "@babel/node": "^7.0.0",
-    "@types/jest": "^23.3.1",
+    "@types/jest": "^23.3.2",
     "@types/react-test-renderer": "^16.0.2",
     "babel-core": "^7.0.0-bridge.0",
     "commitlint": "^7.1.2",
