--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/prismjs": "^1.9.0",
     "@types/react": "^16.4.14",
     "@types/react-content-loader": "^3.1.3",
-    "@types/react-dom": "^16.0.7",
+    "@types/react-dom": "^16.0.8",
     "@types/react-i18next": "^7.8.2",
     "@types/react-loadable": "^5.4.1",
     "@types/react-redux": "^6.0.9",
@@ -56,7 +56,7 @@
     "add-asset-html-webpack-plugin": "^3.0.1",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.18.0",
-    "babel-loader": "^8.0.2",
+    "babel-loader": "^8.0.3",
     "babel-plugin-prismjs": "^1.0.2",
     "body-parser": "^1.18.3",
     "colors": "^1.3.2",
@@ -68,7 +68,7 @@
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.1.3",
+    "cssnano": "^4.1.4",
     "dotenv-webpack": "^1.5.7",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "express": "^4.16.3",
@@ -89,10 +89,10 @@
     "nodemon": "^1.18.4",
     "offline-plugin": "^5.0.5",
     "pg": "^7.4.3",
-    "postcss": "^7.0.3",
+    "postcss": "^7.0.4",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.0.6",
+    "postcss-preset-env": "^6.0.7",
     "prismjs": "^1.15.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "react": "^16.5.2",
@@ -111,7 +111,7 @@
     "style-loader": "^0.23.0",
     "trash-cli": "^1.4.0",
     "ts-loader": "^5.2.1",
-    "typescript": "^3.0.3",
+    "typescript": "^3.1.1",
     "url-loader": "^1.1.1",
     "uuid": "^3.3.2",
     "webpack": "^4.20.2",
@@ -136,13 +136,13 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "husky": "1.0.0-rc.15",
+    "husky": "1.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "react-test-renderer": "^16.5.2",
-    "stylelint": "^9.5.0",
+    "stylelint": "^9.6.0",
     "stylelint-config-standard": "^18.2.0",
-    "ts-jest": "^23.10.1",
+    "ts-jest": "^23.10.2",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
     "webpack-dev-server": "^3.1.9"
