--- a/package.json
+++ b/package.json
@@ -38,14 +38,13 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@types/i18next": "^11.9.2",
+    "@types/i18next": "^11.9.3",
     "@types/i18next-browser-languagedetector": "^2.0.1",
-    "@types/materialize-css": "^1.0.4",
+    "@types/materialize-css": "^1.0.5",
     "@types/prismjs": "^1.9.0",
-    "@types/react": "^16.4.16",
+    "@types/react": "^16.4.18",
     "@types/react-content-loader": "^3.1.3",
     "@types/react-dom": "^16.0.9",
-    "@types/react-i18next": "^7.8.2",
     "@types/react-loadable": "^5.4.1",
     "@types/react-redux": "^6.0.9",
     "@types/react-router": "^4.0.32",
@@ -65,10 +64,10 @@
     "connect-redis": "^3.4.0",
     "connected-react-router": "^4.5.0",
     "cookie-parser": "^1.4.3",
-    "copy-webpack-plugin": "^4.5.3",
+    "copy-webpack-plugin": "^4.5.4",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.1.4",
+    "cssnano": "^4.1.7",
     "dotenv-webpack": "^1.5.7",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "express": "^4.16.4",
@@ -78,30 +77,30 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "http-status": "^1.2.0",
-    "i18next": "^11.9.1",
+    "i18next": "^12.0.0",
     "i18next-browser-languagedetector": "^2.2.3",
-    "image-webpack-loader": "^4.3.1",
-    "immutable": "4.0.0-rc.10",
+    "image-webpack-loader": "^4.4.0",
+    "immutable": "4.0.0-rc.11",
     "materialize-css": "1.0.0",
     "mini-css-extract-plugin": "^0.4.4",
     "morgan": "^1.9.1",
-    "node-sass": "^4.9.3",
-    "nodemon": "^1.18.4",
+    "node-sass": "^4.9.4",
+    "nodemon": "^1.18.5",
     "offline-plugin": "^5.0.5",
-    "pg": "^7.5.0",
+    "pg": "^7.6.0",
     "postcss": "^7.0.5",
-    "postcss-import": "^12.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.1.1",
+    "postcss-preset-env": "^6.3.0",
     "prismjs": "^1.15.0",
     "progress-bar-webpack-plugin": "^1.11.0",
-    "react": "^16.5.2",
+    "react": "^16.6.0",
     "react-content-loader": "^3.2.0",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.6.0",
     "react-hot-loader": "^4.3.11",
-    "react-i18next": "^8.0.7",
+    "react-i18next": "^8.3.5",
     "react-loadable": "^5.5.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
@@ -114,23 +113,23 @@
     "typescript": "^3.1.3",
     "url-loader": "^1.1.2",
     "uuid": "^3.3.2",
-    "webpack": "^4.20.2",
-    "webpack-bundle-analyzer": "^3.0.2",
+    "webpack": "^4.23.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.4",
     "webpack-pwa-manifest": "^3.7.1"
   },
   "devDependencies": {
     "@babel/node": "^7.0.0",
-    "@types/jest": "^23.3.5",
+    "@types/jest": "^23.3.8",
     "@types/react-test-renderer": "^16.0.3",
-    "babel-core": "^7.0.0-bridge.0",
+    "babel-core": "7.0.0-bridge.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "commitlint": "^7.2.1",
     "commitlint-config-armour": "^1.2.1",
     "coveralls": "^3.0.2",
     "dotenv": "^6.1.0",
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^2.14.0",
@@ -139,13 +138,13 @@
     "husky": "1.1.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "react-test-renderer": "^16.5.2",
-    "stylelint": "^9.6.0",
+    "react-test-renderer": "^16.6.0",
+    "stylelint": "^9.7.0",
     "stylelint-config-standard": "^18.2.0",
     "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-dev-server": "^3.1.10"
   },
   "browserslist": [
     "> 1%",
